TASK: Fix height and alignment of toolbar

--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeToolBar/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeToolBar/style.css
@@ -1,5 +1,8 @@
 .toolBar__btnGroup {
   display: flex;
+  height: var(--goldenUnit);
+  justify-content: space-between;
+  
     &:after {
         clear: both;
     }
